Update3 projects.html
añadir imágenes

--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
                                             <h2 class="fw-bolder">Creep - Radiohead</h2>
                                             <p>When you were here before, couldn't look you in the eye. You're just like an angel, your skin makes me cry. You float like a feather, in a beautiful world, I wish I was special, you're so fuckin' special. But I'm a creep.</p>
                                         </div>
-                                        <img class="img-fluid" src="https://images.genius.com/7e8ec7d3265b0867ba38e232650f7c82.300x400x1.jpg" alt="..." />
+                                        <img class="img-fluid" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiYvkiCPrrtgNXdLIgw1_CZ5UwSGnLZYApAgEUdUVjm-0JPG2u51PBpO-5-SxXdr-erHs4ts99T24CJWQk-eClLcatKkGIy54mLwDQlWV5FdG6i1kl0hvzBcKd8jYiGi-MC7fTBUbkRNVV_Nk1PXZG4Fuwc85Y4u2_yMrse8GIw0C0nyQCtSLnjiGc1/w945-h600-p-k-no-nu/7e8ec7d3265b0867ba38e232650f7c82.jpg" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -59,10 +59,10 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Project Name 2</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <h2 class="fw-bolder">Hymn for the Weekend - Coldplay</h2>
+                                            <p>Oh, angel sent from up above, you know you make my world light up, when I was down, when I was hurt, you came to lift me up, life is a drink and love's a drug. Oh, now I think I must be miles up, when I was a river dried up, you came to rain a flood.</p>
                                         </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
+                                        <img class="img-fluid" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhhhwswVEQXG-uyD_TNNg5A7qaXGqSky8J6zS60iqLRke3JKtvZXYE7vuF27J3WYPKn4UlLwJE_ZZAkDFzMUhBJWO0n7C4R0gsbv5BKzfvyynbnR3UGa2aeCna3CxkK7SZlfqFtCKy_1DgizWutEcTmHuqX6D5j40Q9iZeFmFwkgv28a5Ful3WBGyp9/s320/R.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
