--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Personal - Start Bootstrap Template</title>
+        <title>Personal - En-rique</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Custom Google font-->
@@ -22,7 +22,7 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Start Bootstrap</span></a>
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">En-rique</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
@@ -44,7 +44,7 @@
                         <!-- Experience Section-->
                         <section>
                             <div class="d-flex align-items-center justify-content-between mb-4">
-                                <h2 class="text-primary fw-bolder mb-0">Experience</h2>
+                                <h2 class="text-primary fw-bolder mb-0">Experiencia</h2>
                                 <!-- Download resume button-->
                                 <!-- Note: Set the link href target to a PDF file within your project-->
                                 <a class="btn btn-primary px-4 py-3" href="#!">
@@ -60,11 +60,11 @@
                                             <div class="bg-light p-4 rounded-4">
                                                 <div class="text-primary fw-bolder mb-2">2019 - Present</div>
                                                 <div class="small fw-bolder">Web Developer</div>
-                                                <div class="small text-muted">Stark Industries</div>
+                                                <div class="small text-muted">Industrias Stark</div>
                                                 <div class="small text-muted">Los Angeles, CA</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div>Amiga mía, lo sé, solo vives por él, él lo sabe también. Pero él no te ve como yo, suplicarle a mi boca. Que diga que él me ha confesado entre copas, que es con tu piel con quien sueña de noche, y que enloquece con cada botón que te desabrochas pensando en sus manos. Él no te ha visto temblar esperando, una palabra, algún gesto, un abrazo.</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -80,7 +80,7 @@
                                                 <div class="small text-muted">Gotham City, NY</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div>Ya casi no salgo, no te quiero ver, to'a mi ropa ya la combiné, no debí salir de casa ayer, no debí pensar en llamarte. Ahora estoy hablándome solo otra vez, duele como un golpe a la pared, y tu olor muy parecido al de Chanel</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -96,8 +96,8 @@
                                             <div class="bg-light p-4 rounded-4">
                                                 <div class="text-secondary fw-bolder mb-2">2015 - 2017</div>
                                                 <div class="mb-2">
-                                                    <div class="small fw-bolder">Barnett College</div>
-                                                    <div class="small text-muted">Fairfield, NY</div>
+                                                    <div class="small fw-bolder">Monsters University</div>
+                                                    <div class="small text-muted">Monstropolis</div>
                                                 </div>
                                                 <div class="fst-italic">
                                                     <div class="small text-muted">Master's</div>
@@ -105,7 +105,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div>Can you hear the silence? ¿Can you see the dark? ¿Can you fix the broken? Can you feel, can you feel my heart? ¿Can you help the hopeless? Well, I'm begging on my knees, can you save my bastard soul, will you wait for me? I'm sorry, brothers, so sorry, lover. Forgive me, father, I love you, mother</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -117,8 +117,8 @@
                                             <div class="bg-light p-4 rounded-4">
                                                 <div class="text-secondary fw-bolder mb-2">2011 - 2015</div>
                                                 <div class="mb-2">
-                                                    <div class="small fw-bolder">ULA</div>
-                                                    <div class="small text-muted">Los Angeles, CA</div>
+                                                    <div class="small fw-bolder">East High School</div>
+                                                    <div class="small text-muted">Salt Lake City, UT</div>
                                                 </div>
                                                 <div class="fst-italic">
                                                     <div class="small text-muted">Undergraduate</div>
@@ -126,7 +126,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div>Somebody said they saw you, the person you were kissing wasn't me, and I would never ask you, I just kept it to myself. I don't wanna know, if you're playin' me, keep it on the low, 'cause my heart can't take it anymore, and if you creepin', please don't let it show, oh, baby, I don't wanna know</div></div>
                                     </div>
                                 </div>
                             </div>
